--- a/css/contact.css
+++ b/css/contact.css
@@ -31,6 +31,8 @@ p {
 
 section {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 60%;
 }
 .infos {
@@ -61,10 +63,11 @@ section {
 
 
 .map {
-    width: 55%;
+    min-width: 450px;
 }
+
 a{
-    text-decoration: none;
+    text-decoration: underline;
     color: #8b8c90
 }
 
@@ -72,15 +75,31 @@ a{
     display : flex;
 }
 
-section{
-    background-color: #282b30;
-}
+
 
 .bloc{
+    display: flex;
+    justify-content: flex-start;
     margin:5px;
     padding: 5px;
     text-align: center;
     width : 200px;
+}
+
+.bloc_contact {
+    padding-top: 25px;
+}
+
+.info-container  {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #282b30;
+    /*width: 50%;*/
+    min-width: 450px;
+    
+    min-height: 450px;
 }
 
 .info-container p {
@@ -93,13 +112,17 @@ section{
 }
 
 .icon-text{
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 .icon-circle{
     border-radius: 50%;
     padding:15px;
-    border :solid #8b8c90 1px;
+    border :solid #8b8c90 2px;
+}
+
+.icon_circle_white {
+    border: solid white 2px;
 }
 
 i{
@@ -110,3 +133,11 @@ i{
 display:flex;
 justify-content: space-around;
 }
+
+.fa-brands{
+    margin: 0 5px;
+    color: white;
+    width: 20px;
+}
+
+
